tests/ui/rfcs/rfc-1445-restrict-constants-in-patterns/issue-61188-match-slice-forbidden-without-eq.stderr
error: to use a constant of type `&[B]` in a pattern, the type must implement `PartialEq`
  --> $DIR/issue-61188-match-slice-forbidden-without-eq.rs:15:9
   |
LL |         A => (),
   |         ^

error: aborting due to 1 previous error

